# odmkraken

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  release.py  test.py
.github/workflows/: build-conda-package.yml  live-tests.yaml  run-tests.yml
conda/: build-env.yml  build.py  devel-env.yml  meta.yaml
docs/: NETEX.ipynb
src/odmkraken/: __init__.py
src/odmkraken/busspeeds/: common.py  extract.py  jobs.py  mapmatch.py  mapmatcher.py  network.py  repo.py  retrieve.py
src/odmkraken/deploy/: __init__.py  __main__.py  db.halts.sql  db.network.sql  db.rawdata.sql  db.results.sql  db.setup.sql  db.teardown.sql  db.transform.sql  db.vehdata.sql  install2.ps1  nginx.py
src/odmkraken/resources/: __init__.py  pandas.py  postgres.py
src/odmkraken/resources/edmo/: __init__.py  busdata.py  create.py  create.setupdb.sql  create.sql
src/odmkraken/resources/edmo/busdata/: __init__.py  iomanager.py  sql.py
tests/: test_database.py
tests/busspeeds/: test_busspeeds.py  test_extract.py  test_mapmatch.py
tests/resources/: test_postgres.py
tests/resources/edmo/: test_busdata.py  test_busdata_sql.py  test_busdata_sql_live.py  test_iomanager.py
