[project]
    description = "OdmKraken"
    name = "odmkraken"
    authors = [
        { name = "Gil Georges", email = "gil.georges@mob.etat.lu" }
    ]
    requires-python = ">=3.7"
    readme = "README.md"
    license = {text = "MIT"}
    classifiers = [
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "dagster >=0.15.3",
        "psycopg2",
        "mapmatcher"
    ]
    dynamic = ["version"]

[build-system]
    requires = ["setuptools>=56", "wheel", "setuptools_scm[toml]>=3.4.1"]
    build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "black",
    "mypy"
]

[tool.black]
skip-string-normalization = true

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov-report xml:cov.xml --cov odmkraken"
pythonpath = ["src"]
testpaths = ["tests"]
